# simple_django

./: README.md  pyproject.toml
simple_project/: db.sqlite3  seed.py
simple_project/simple_app/: views.py
simple_project/simple_app/migrations/: 0001_initial.py
simple_project/simple_app/templates/: list.html
simple_project/simple_project/: asgi.py  settings.py  urls.py  wsgi.py
